--- a/New folder (2)/career.html
+++ b/New folder (2)/career.html
@@ -101,7 +101,7 @@
                     <div class="image">
                         <img src="assets/imgs/science.png" alt="" width="373.4px" height="373.5">
                         <div class="share">
-                            <a href="class9.html" class="btn">click here</a>
+                            <a href="science.html" class="btn">click here</a>
                         </div>
                     </div>
                     <div class="content">
@@ -112,7 +112,7 @@
                     <div class="image">
                         <img src="assets/imgs/commerce.png" alt="" width="373.4px" height="373.5">
                         <div class="share">
-                            <a href="class9.html" class="btn">click here</a>
+                            <a href="commerce.html" class="btn">click here</a>
                         </div>
                     </div>
                     <div class="content">
@@ -123,7 +123,7 @@
                     <div class="image">
                         <img src="assets/imgs/humanities.png" alt="" width="373.4px" height="373.5">
                         <div class="share">
-                            <a href="class9.html" class="btn">click here</a>
+                            <a href="humanities.html" class="btn">click here</a>
                         </div>
                     </div>
                     <div class="content">
