--- a/New folder (2)/commerce.html
+++ b/New folder (2)/commerce.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Commerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/commerce.css">
@@ -21,7 +21,6 @@
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="DoubtsPage.htm">courses</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
